# Saliere

./: .gitignore  .style.yapf  AUTHORS  ChangeLog  LICENSE.txt  README.rst  config.yml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
data/: defaults.yml  saliere.yml
data/templates/python/template/: LICENSE.txt  README.rst  setup.cfg  test-requirements.txt
data/templates/salt-formula/template/template/: map.jinja
data/templates/vagrant-ansible/template/: Vagrantfile  ansible.cfg  idempotency.sh  tools.sh
data/templates/vagrant-ansible/template/ansible/: provision.yml
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  python.rst  salt-formula.rst  usage.rst  vagrant-ansible.rst
saliere/: config.py  core.py  main.py  saliere.py  templatizer.py
saliere/tests/: test_config.py  test_core.py  test_main.py  test_saliere.py  test_templatizer.py
templates/salt-formula/template/: CHANGELOG.rst  LICENSE  README.rst  pillar.example
templates/salt-formula/template/template/: init.sls
templates/template-formula/: CHANGELOG.rst  README.rst  pillar.example
templates/template-formula/template/: init.sls  map.jinja
