[metadata]
name = saliere
version = 0.1
author = Rémy Greinhofer
author-email = remy.greinhofer@livelovely.com
summary = Helps you create a formula for Salt.
license = MIT License
description-file = README.rst
home-page = http://docs.livelovely.com/developer/saliere
requires-python = >=3.4
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Topic :: System :: Systems Administration
    Topic :: Utilities

[files]
data_files =
  usr/local/share/saliere/templates = templates/*

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
