[metadata]
name = saliere
version = 0.3
author = Rémy Greinhofer
author-email = remy.greinhofer@livelovely.com
summary = Templatize everything.
license = MIT License
description-file = README.rst
home-page = https://github.com/rgreinho/saliere
requires-python = >=3.4
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Topic :: System :: Systems Administration
    Topic :: Utilities

[files]
data_files =
  share/saliere/templates = data/templates/*
  etc/saliere/defaults.yml = data/defaults.yml

[entry_points]
console_scripts =
    saliere = saliere.main:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 0
