[metadata]
name = {{ project_name }}
author = {{ author }}
author-email = {{ author_email }}
summary = {{ one_line_summary }}
license = MIT License
description-file = README.rst
home-page = {{ repository }}
requires-python = >=3.4
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Topic :: System :: Systems Administration
    Topic :: Utilities

{% if files is defined -%}
[files]
data_files =
{% for k, v in files.items() %}
  {{k}} = {{v}}
{% endfor %}
{%- endif %}

[entry_points]
console_scripts =
    {{ project_name }} = {{ project_name }}.main:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 0
